<resources>
    <string name="app_name">Notes</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="or">Or</string>
    <string name="common_register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logOut">Log Out</string>
    <string name="cancel_dialog_button">Cancel</string>
    <string name="create_dialog_button">Create</string>
    <string name="new_note">New Note</string>
    <string name="date_picker">Date Time</string>
    <string name="date_picker_hint">Pick date time</string>
    <string name="update_dialog_button">Update</string>
</resources>
